syntax = "proto3";

package pokemonstore;

option go_package = "pokemonstore/sdk";

import "google/protobuf/empty.proto";

service PokemonStore {
    rpc Buy(BuyRequest) returns (google.protobuf.Empty);
}

message BuyRequest {
    uint64 user_id = 1;
    uint64 pokemon_id = 2;
}
